Remove unnecessary dependency on external libraries