@@ -1,15 +1,14 @@
 package no.unit.nva.cristin.institutions;
 
 import com.google.gson.JsonObject;
-import org.apache.commons.lang3.StringUtils;
 
 import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+
+import static java.util.Objects.nonNull;
 
 /**
  * POJO containing response object for API Gateway.
@@ -76,10 +75,10 @@ public class GatewayResponse {
         Map<String, String> headers = new ConcurrentHashMap<>();
         headers.put(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON);
         final String corsAllowDomain = Config.getInstance().getCorsHeader();
-        if (StringUtils.isNotEmpty(corsAllowDomain)) {
+        if (nonNull(corsAllowDomain) && !corsAllowDomain.isEmpty()) {
             headers.put(CORS_ALLOW_ORIGIN_HEADER, corsAllowDomain);
         }
-        this.headers = Collections.unmodifiableMap(new HashMap<>(headers));
+        this.headers = Map.copyOf(headers);
     }
 
 }
